--- a/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
@@ -15,14 +15,16 @@
     </Page.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="197*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="200*" />
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical"
                     Grid.Column="0"
                     VerticalAlignment="Center"
                     x:Name="DisconnectedPanel"
-                    Visibility="{Binding DisconnectedPanelVisibility}">
+                    Visibility="{Binding DisconnectedPanelVisibility}"
+                    Grid.ColumnSpan="2">
             <TextBlock HorizontalAlignment="Center"
                        FontSize="20"
                        Margin="5"
@@ -30,13 +32,20 @@
                        Foreground="DarkRed">
                 <Run Text="Настройки профиля недоступны." />
                 <LineBreak />
-                <Run Text="Для получения полного доступа к программе, Вам необходимо войти в аккаунт."/>
+                <Run Text="Для получения полного доступа к программе, Вам необходимо войти в аккаунт." />
             </TextBlock>
         </StackPanel>
+        <Border BorderThickness="0.5"
+                Padding="0"
+                VerticalAlignment="Stretch"
+                HorizontalAlignment="Right"
+                BorderBrush="#FF4C4949"
+                Grid.Column="1" />
         <hc:ScrollViewer Grid.Column="0"
                          VerticalScrollBarVisibility="Auto"
                          HorizontalScrollBarVisibility="Auto"
-                         Visibility="{Binding ProfilePanelVisibility}">
+                         Visibility="{Binding ProfilePanelVisibility}"
+                         Grid.ColumnSpan="2">
             <StackPanel Orientation="Vertical"
                         Grid.Column="0"
                         x:Name="profilePanel">
@@ -209,7 +218,7 @@
                 </StackPanel>
             </StackPanel>
         </hc:ScrollViewer>
-        <hc:ScrollViewer Grid.Column="1"
+        <hc:ScrollViewer Grid.Column="2"
                          VerticalScrollBarVisibility="Auto"
                          HorizontalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical"
@@ -322,17 +331,17 @@
                                HorizontalAlignment="Center"
                                FontSize="20" />
                     <DockPanel LastChildFill="False">
-                    <TextBlock DockPanel.Dock="Left"
-                               Text="Введите Hex код цвета"
-                               VerticalAlignment="Center"
-                               Margin="5" />
+                        <TextBlock DockPanel.Dock="Left"
+                                   Text="Введите Hex код цвета"
+                                   VerticalAlignment="Center"
+                                   Margin="5" />
                         <hc:TextBox DockPanel.Dock="Left"
-                                Margin="5"
-                                hc:InfoElement.Placeholder="Hex код"
-                                x:Name="resultColor"
-                                Width="300"
-                                HorizontalContentAlignment="Left"
-                                VerticalContentAlignment="Center" />
+                                    Margin="5"
+                                    hc:InfoElement.Placeholder="Hex код"
+                                    x:Name="resultColor"
+                                    Width="300"
+                                    HorizontalContentAlignment="Left"
+                                    VerticalContentAlignment="Center" />
                     </DockPanel>
                 </StackPanel>
                 <StackPanel Orientation="Vertical">
