--- a/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
@@ -11,7 +11,7 @@
       d:DesignWidth="800"
       Title="Настройки">
     <Page.DataContext>
-        <ViewModel:SettingsPageViewModel />
+        <ViewModel:TestSettingsPageViewModel />
     </Page.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -23,7 +23,7 @@
                     Grid.Column="0"
                     VerticalAlignment="Center"
                     x:Name="DisconnectedPanel"
-                    Visibility="{Binding DisconnectedPanelVisibility}"
+                    Visibility="{Binding DisconnectedPanelVisibility.Shield}"
                     Grid.ColumnSpan="2">
             <TextBlock HorizontalAlignment="Center"
                        FontSize="20"
@@ -44,7 +44,7 @@
         <hc:ScrollViewer Grid.Column="0"
                          VerticalScrollBarVisibility="Auto"
                          HorizontalScrollBarVisibility="Auto"
-                         Visibility="{Binding ProfilePanelVisibility}"
+                         Visibility="{Binding ProfilePanelVisibility.Shield}"
                          Grid.ColumnSpan="2">
             <StackPanel Orientation="Vertical"
                         Grid.Column="0"
@@ -68,7 +68,8 @@
                                     x:Name="userFirstname"
                                     hc:InfoElement.Placeholder="Имя"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center" 
+                                    Text="{Binding User.Shield.FirstName}"/>
                     </DockPanel>
                     <DockPanel LastChildFill="True">
                         <TextBlock DockPanel.Dock="Left"
@@ -81,7 +82,8 @@
                                     x:Name="userLastname"
                                     hc:InfoElement.Placeholder="Фамилия"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding User.Shield.LastName}" />
                     </DockPanel>
                     <DockPanel LastChildFill="False">
                         <TextBlock DockPanel.Dock="Left"
@@ -94,7 +96,8 @@
                                        hc:InfoElement.Placeholder="Дата рождения"
                                        x:Name="userBirthday"
                                        HorizontalContentAlignment="Left"
-                                       VerticalContentAlignment="Center" />
+                                       VerticalContentAlignment="Center"
+                                       SelectedDate="{Binding User.Shield.Birthday}"/>
                     </DockPanel>
                     <DockPanel LastChildFill="False">
                         <TextBlock DockPanel.Dock="Left"
@@ -107,7 +110,10 @@
                                      x:Name="userCountry"
                                      hc:InfoElement.Placeholder="Страна"
                                      HorizontalContentAlignment="Center"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center"
+                                     ItemsSource="{Binding CountryList.Shield}"
+                                     DisplayMemberPath="Name"
+                                     SelectedItem="{Binding User.Shield.Country}"/>
                     </DockPanel>
                 </StackPanel>
                 <StackPanel Orientation="Vertical">
@@ -126,7 +132,8 @@
                                     Margin="5"
                                     x:Name="userRole"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center" 
+                                    Text="{Binding User.Shield.Role.Name}"/>
                     </DockPanel>
                     <DockPanel LastChildFill="True">
                         <TextBlock DockPanel.Dock="Left"
@@ -139,7 +146,8 @@
                                     Margin="5"
                                     x:Name="userLogin"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding User.Shield.Login}" />
                     </DockPanel>
                     <DockPanel LastChildFill="True">
                         <TextBlock DockPanel.Dock="Left"
@@ -165,7 +173,8 @@
                                     hc:InfoElement.Placeholder="Никнейм"
                                     x:Name="userNickname"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center"
+                                    Text="NickName" />
                     </DockPanel>
                     <DockPanel LastChildFill="True">
                         <TextBlock DockPanel.Dock="Left"
@@ -178,7 +187,8 @@
                                     hc:InfoElement.Placeholder="Электронная почта"
                                     x:Name="userEmail"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding User.Shield.Email}" />
                     </DockPanel>
                 </StackPanel>
                 <StackPanel Orientation="Vertical">
@@ -192,7 +202,10 @@
                                      hc:InfoElement.Placeholder="Профили"
                                      x:Name="settingsProfileList"
                                      HorizontalContentAlignment="Center"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center" 
+                                     ItemsSource="{Binding SettingsList.Shield}"
+                                     DisplayMemberPath="Name"
+                                     SelectedItem="{Binding SelectedSetting.Shield}"/>
                         <Button DockPanel.Dock="Left"
                                 Width="auto"
                                 Content="Загрузить профиль"
@@ -243,7 +256,10 @@
                                      hc:InfoElement.Placeholder="Язык"
                                      x:Name="outputLanguage"
                                      HorizontalContentAlignment="Center"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center"
+                                     ItemsSource="{Binding LanguageList.Shield}"
+                                     DisplayMemberPath="Name"
+                                     SelectedItem="{Binding TranslatorLanguage}" />
                     </DockPanel>
                     <DockPanel LastChildFill="False">
                         <DockPanel DockPanel.Dock="Top"
@@ -258,7 +274,10 @@
                                          hc:InfoElement.Placeholder="Переводчик"
                                          x:Name="translator"
                                          HorizontalContentAlignment="Center"
-                                         VerticalContentAlignment="Center" />
+                                         VerticalContentAlignment="Center"
+                                         ItemsSource="{Binding TranslatorList.Shield}"
+                                         DisplayMemberPath="Name"
+                                         SelectedItem="{Binding SelectedTranslator.Shield}" />
                         </DockPanel>
                         <DockPanel DockPanel.Dock="Bottom"
                                    LastChildFill="False">
@@ -272,7 +291,8 @@
                                         x:Name="apiKey"
                                         Width="250"
                                         HorizontalContentAlignment="Left"
-                                        VerticalContentAlignment="Center" />
+                                        VerticalContentAlignment="Center"
+                                        Text="{Binding TranslatorApiKey.Shield}"/>
                             <Button DockPanel.Dock="Right"
                                     Margin="5"
                                     BorderBrush="Transparent"
@@ -296,7 +316,10 @@
                                      x:Name="inputLanguage"
                                      hc:InfoElement.Placeholder="Язык"
                                      HorizontalContentAlignment="Left"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center"
+                                     ItemsSource="{Binding LanguageList.Shield}"
+                                     DisplayMemberPath="Name"
+                                     SelectedItem="{Binding TranslatorLanguage.Shield}" />
                     </DockPanel>
                     <DockPanel LastChildFill="False">
                         <TextBlock DockPanel.Dock="Left"
@@ -309,7 +332,10 @@
                                      x:Name="ocr"
                                      hc:InfoElement.Placeholder="OCR"
                                      HorizontalContentAlignment="Left"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center"
+                                     ItemsSource="{Binding OcrList.Shield}"
+                                     DisplayMemberPath="Name"
+                                     SelectedItem="{Binding OcrLanguage.Shield}" />
                     </DockPanel>
                     <DockPanel LastChildFill="False"
                                IsEnabled="False"
@@ -341,7 +367,8 @@
                                     x:Name="resultColor"
                                     Width="300"
                                     HorizontalContentAlignment="Left"
-                                    VerticalContentAlignment="Center" />
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding ResultColor.Shield}"/>
                     </DockPanel>
                 </StackPanel>
                 <StackPanel Orientation="Vertical">
@@ -359,14 +386,18 @@
                                      Margin="5"
                                      hc:InfoElement.Placeholder="Клавиша"
                                      HorizontalContentAlignment="Center"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center"
+                                     ItemsSource="{Binding HotkeyKeyList.Shield}"
+                                     SelectedItem="{Binding SelectedHotkeyKey.Shield}"/>
                         <hc:ComboBox DockPanel.Dock="Right"
                                      Width="auto"
                                      x:Name="hotkeyModifier"
                                      Margin="5"
                                      hc:InfoElement.Placeholder="Модификатор"
                                      HorizontalContentAlignment="Center"
-                                     VerticalContentAlignment="Center" />
+                                     VerticalContentAlignment="Center"
+                                     ItemsSource="{Binding HotkeyModifiersList.Shield}"
+                                     SelectedItem="{Binding SelectedHotkeyModifier.Shield}"/>
                     </DockPanel>
                 </StackPanel>
                 <StackPanel Orientation="Vertical">
@@ -383,7 +414,8 @@
                                   Margin="5"
                                   x:Name="autostartWithSystem"
                                   HorizontalContentAlignment="Right"
-                                  VerticalContentAlignment="Center" />
+                                  VerticalContentAlignment="Center"
+                                  IsChecked="{Binding StartupWithSystem.Shield}"/>
                     </DockPanel>
                     <DockPanel LastChildFill="False">
                         <TextBlock DockPanel.Dock="Left"
@@ -395,7 +427,8 @@
                                   Margin="5"
                                   x:Name="toTrayIcon"
                                   HorizontalContentAlignment="Right"
-                                  VerticalContentAlignment="Center" />
+                                  VerticalContentAlignment="Center"
+                                  IsChecked="{Binding MinimizeToTray.Shield}"/>
                     </DockPanel>
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="Профиль"
@@ -412,11 +445,12 @@
                                         x:Name="profileName"
                                         Width="250"
                                         HorizontalContentAlignment="Left"
-                                        VerticalContentAlignment="Center" />
+                                        VerticalContentAlignment="Center"
+                                        Text="{Binding CurrentProfileName.Shield}"/>
                             <Button Content="Сохранить"
                                     Margin="5"
                                     DockPanel.Dock="Right"
-                                    BorderBrush="#FF4862F1" />
+                                    BorderBrush="#FF4862F1"/>
                         </DockPanel>
                     </StackPanel>
                 </StackPanel>
