--- a/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
@@ -11,7 +11,7 @@
       d:DesignWidth="800"
       Title="TranslateHistoryPage">
     <Page.DataContext>
-        <ViewModel:HistoryAndTranslatePageViewModel />
+        <ViewModel:TestHistoryAndTranslatePageViewModel />
     </Page.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -123,14 +123,16 @@
                                       DefaultExt="PNG Files (*.png)|*.png"
                                       Filter="All files|*.*|JPEG Files (*.jpeg)|*.jpeg|PNG Files (*.png)|*.png|JPG Files (*.jpg)|*.jpg|GIF Files (*.gif)|*.gif" />
                     <Image DockPanel.Dock="Top"
-                           Source="{Binding ElementName=image, Path=Uri}"
+                           Source="{Binding ElementName=image, Path=Uri, Mode=OneWay}"
+                           x:Name="selectedImage"
                            Margin="5" 
                            Width="150"/>
                     <TextBlock x:Name="translateResult"
                                Margin="5"
                                DockPanel.Dock="Left"
                                VerticalAlignment="Bottom"
-                               FontSize="16">
+                               FontSize="16"
+                               Text="{Binding Output.Shield.OutputText}">
                     <Run Text="Текст:" />
                     <Run Text="Hello World"
                          FontWeight="Bold" />
@@ -141,7 +143,9 @@
                     </TextBlock>
                 </DockPanel>
                 <Button Content="Получить"
-                        Margin="5" />
+                        Margin="5"
+                        x:Name="GetTranslateButton"
+                        Click="GetTranslateButton_Click"/>
             </StackPanel>
         </hc:ScrollViewer>
     </Grid>
