--- a/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
@@ -11,7 +11,7 @@
       d:DesignWidth="800"
       Title="Настройки">
     <Page.DataContext>
-        <ViewModel:TestSettingsPageViewModel />
+        <ViewModel:SettingsPageViewModel />
     </Page.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -319,7 +319,7 @@
                                      VerticalContentAlignment="Center"
                                      ItemsSource="{Binding LanguageList.Shield}"
                                      DisplayMemberPath="Name"
-                                     SelectedItem="{Binding TranslatorLanguage.Shield}" />
+                                     SelectedItem="{Binding OcrLanguage.Shield}" />
                     </DockPanel>
                     <DockPanel LastChildFill="False">
                         <TextBlock DockPanel.Dock="Left"
